--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -1,7 +1,10 @@
 ﻿@using ReHouse.FrontEnd.Helpers
 @using ReHouse.FrontEnd.Models
 @using ReHouse.Utils.DataBase.News
-
+@using ReHouse.Utils.DataBase.Common
+@{
+    var seo = ViewBag.SeoParams as SeoParam;
+}
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,13 +13,18 @@
     <meta http-equiv="~/Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/Content/mobile.css">
-    @if (!String.IsNullOrEmpty(ViewBag.Title))
+    @if (seo != null)
     {
         <title>@ViewBag.Title</title>
-        <meta property="og:title" content="@ViewBag.Title" />
-        <meta name="twitter:title" content="@ViewBag.Title">
-        <meta itemprop="name" content="@ViewBag.Title" />
-        <meta property="og:site_name" content="@ViewBag.Title" />
+        <meta property="og:title" content="@seo.Title" />
+        <meta name="twitter:title" content="@seo.Title">
+        <meta itemprop="name" content="@seo.Title" />
+        <meta property="og:site_name" content="@seo.Title" />
+        <meta name="keywords" content="@seo.Keywords" />
+        <meta name="description" content="@seo.Description" />
+        <meta property="og:description" content="@seo.Description" />
+        <meta name="twitter:description" content="@seo.Description" />
+        <meta itemprop="description" content="@seo.Description" />
     }
     else
     {
@@ -25,15 +33,13 @@
         <meta name="twitter:title" content="Международная риэлторская инвестиционная компания REHOUSE">
         <meta itemprop="name" content="Международная риэлторская инвестиционная компания REHOUSE" />
         <meta property="og:site_name" content="Международная риэлторская инвестиционная компания REHOUSE" />
+        <meta name="keywords" content="Международная риэлторская инвестиционная компания REHOUSE" />
+        <meta name="description" content="Международная риэлторская инвестиционная компания REHOUSE" />
+        <meta property="og:description" content="Международная риэлторская инвестиционная компания REHOUSE">
+        <meta name="twitter:description" content="Международная риэлторская инвестиционная компания REHOUSE" />
+        <meta itemprop="description" content="Международная риэлторская инвестиционная компания REHOUSE" />
     }
-    <meta name="keywords" content="Международная риэлторская инвестиционная компания REHOUSE" />
-    @if (!String.IsNullOrEmpty(ViewBag.Description))
-    {
-        <meta name="description" content="@ViewBag.Description" />
-        <meta property="og:description" content="@ViewBag.Description" />
-        <meta name="twitter:description" content="@ViewBag.Description" />
-        <meta itemprop="description" content="@ViewBag.Description" />
-    }
+
     @if (!String.IsNullOrEmpty(ViewBag.Image))
     {
         <meta property="og:image" content="@ViewBag.Image" />
@@ -41,16 +47,13 @@
         <meta itemprop="image" content="@ViewBag.Image" />
     }
 
-
     @Scripts.Render("~/bundles/jquery")
     @Styles.Render("~/Content/styleCss")
     @Scripts.Render("~/bundles/jcarouselLite")
-
     <!-- Alert при закрытии -->
     <!-- <script>
         $(window).on('beforeunload', function(){ return 'Вы уверены, что хотите покинуть страницу?сука'; });
     </script> -->
-
     <script type="text/javascript">
         $(function () {
             $('#slidebox').jCarouselLite({
@@ -105,7 +108,6 @@
                 </div>
                 <div class="search">
                     <p><form class="form-search" method="get" action="/search" target="_blank"><input type="text" name="q" placeholder="Введите слово или фразу" value="" /></form></p>
-
                     @if (Session != null && Session["user"] is SessionModel)
                     {
                         var session = Session["user"] as SessionModel;
@@ -125,7 +127,6 @@
                         </div>
                     }
                 </div>
-
                 <div class="contactinfo">
                     <div class="tel">
                         <div class="imgtel">
@@ -143,17 +144,13 @@
                         <a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>
                     </div>
                 </div>
-
                 <div class="feedback">
                     <a href="~/cart/index" id="fav">Избранное</a>
                     <a href="~/email/index" id="blink">Обратный звонок</a>
                 </div>
-
             </span>
         </div>
     </div>
-
-
 
     <div id="nav">
         <div class="container" id="container">
@@ -193,26 +190,20 @@
                             <li><a href="~/vacancy/">Вакансии агенства</a></li>
                         </ol>
 
-
                     </li>
-
                 </ol>
             </div>
-
             <div class="sell">
                 <a href="~/email/index" id="">Хочу продать!</a>
             </div>
         </div>
     </div>
     <div class="container" id="container">
-
         <div id="slidebox">
-
             <div class="textinslider">
                 <div class="h1">
                     @*<h1>REHOUSE</h1>*@
                 </div>
-
 
                 <div class="h2">
                     @*             <h2>Ваш дом - наш успех</h2>*@
@@ -237,7 +228,6 @@
             </ul>
         </div>
     </div>
-
     <div class="header_mobile">
         <input type="checkbox" id="hmt" class="hidden-menu-ticker">
         <label class="btn-menu" for="hmt">
@@ -281,7 +271,6 @@
                     <a href="~/email/index" id="blink1"></a>
                     <a href="~/cart/index" id="fav1"></a>
                 </div>
-
                 <div class="tel">
                     <div class="imgtel">
                         <img src="~/Content/images/tel.png">
@@ -298,9 +287,7 @@
         </div>
     </div>
     <div class="container" id="container">
-
         @RenderBody()
-
         @if (ViewBag.Articles != null)
         {
             <div class="news">
@@ -334,7 +321,6 @@
                         </div>
                     </div>
                 }
-
                 <div class="morenews">
                     <a href="~/news/index" id="more">Все новости</a>
                 </div>
@@ -388,5 +374,4 @@
         $(document).foundation('dropdown', 'reflow');
     </script>
 </body>
-
 </html>
