--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -154,7 +154,7 @@
                         <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
                         <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
                         <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
-                        <a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>
+                        @*<a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>*@
                     </div>
                 </div>
                 <div class="feedback">
@@ -345,7 +345,7 @@
                 <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
                 <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
                 <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
-                <a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>
+                @*<a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>*@
             </div>
             <div class="bottomnav">
                 <a href="~/news/index" class="">Новости</a>
