--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Districts/List.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Districts/List.cshtml
@@ -33,6 +33,8 @@
         <li><a class="4" href="~/cabinet/vacancies/list">Вакансии</a></li>
         <li><a class="4" href="~/cabinet/builders/list">Застройщики</a></li>
         <li><a class="preActive active" href="~/cabinet/districts/list">Районы</a></li>
+        <li><a class="4" href="~/cabinet/seoparametrs/list">SEO параметры</a></li>
+        <li><a class="4" href="~/cabinet/texts/list">Тексты</a></li>
     </ul>
 </div>
 <div id="adminka2" class="tabset_content">
