--- a/ReHouse.FrontEnd/Views/News/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/News/Detail.cshtml
@@ -27,7 +27,7 @@
             }
         </div>
         <div class="content1">
-            <p>@Model.Description</p>
+            <p>@Html.Raw(Model.Description)</p>
             <div class="share_icons1">
                 <div class="share_fb">
                     <a onclick="Share.facebook('http://rehouse-realty.com.ua/news/detail/@(Model.Id)', '@Model.Title', 'http://rehouse-realty.com.ua@(Url.Content(Model.Images?.FirstOrDefault() != null ? Model.Images.FirstOrDefault().Url + Model.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(Model.Description?.Replace(Environment.NewLine, " "))')"></a>
