--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -351,11 +351,11 @@
                             <h3>@article.Title</h3>
                             @if (@article.Description.Length > 750)
                             {
-                                <p id="news_@article.Id">@article.Description.Substring(0, 749) ...</p>
+                                <p id="news_@article.Id">@Html.Raw(article.Description.Substring(0, 749)) ...</p>
                             }
                             else
                             {
-                                <p>@article.Description</p>
+                                <p>@Html.Raw(article.Description)</p>
                             }
                             <h4>@article.Date.ToShortDateString() в @article.Date.ToShortTimeString()</h4>
                             <a href="/news/detail/@article.Id" @*onclick="showDetails(@article.Id, this);"*@ id="more">Подробнее</a>
