--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                     <p class="textlogo">Международная риэлторская инвестиционная компания</p>
                 </div>
                 <div class="search">
-                    <p><form class="form-search" method="get" action="/search" target="_blank"><input type="text" name="q" placeholder="Введите слово или фразу" value="" /></form></p>
+                    <p><form class="form-search" method="get" action="/search/flats" target="_blank"><input type="text" name="query" placeholder="Введите слово или фразу" value="" /></form></p>
 
                     @if (Session != null && Session["user"] is SessionModel)
                     {
